# Minesweeper

./: .gitignore  BUILD.md  CMAKE_BUILD.md  CMakeLists.txt  Minesweeper.sln  Minesweeper.vcxproj  README.md  build.bat  source_files.txt  update_project.ps1
src/: ATL_dynamic_atexit_destructor_for_AtlWinModule_.cpp  ATL_dynamic_initializer_for_AtlWinModule_.c  ChangeAppearanceDialog_LogErrorCallback.cpp  ChangeAppearanceDialog_StreamFromFileCallback.cpp  CheckTextureRequirements.cpp  D3DXTex_DecodePremult.c  D3DXTex_Encode565.cpp  D3DXTex_EncodeDXT1.cpp  D3DXTex_OptimizeAlpha.cpp  D3DXTex_OptimizeRGB.c  D3DXTex_ScoreFormat.cpp  D3DXTex_TF_SetupTriangle.c  GameBoard.cpp  GameBoard.h  MinesweeperGame.cpp  MinesweeperGame.h  OnCommand.c  SharedDialogs_ChangeAppearance_DialogProc.cpp  SharedDialogs_ChangeAppearance_ExitCleanup.cpp  SharedDialogs_ChangeAppearance_LogCallback.cpp  SharedDialogs_ChangeAppearance_OnWmCommand.c  SharedDialogs_ChangeAppearance_OnWmInitDialog.cpp  WinMain.cpp  _0Board_QEAA_W4EDifficulty_HHHIHH_N_Z.c  _0CCodec_D3DXTex_IEAA_PEAUD3DX_BLT_IK_Z.c  _0CommonControllerThread_QEAA_PEAUHWND_NPEAVIControllerInterface_Z.cpp  _0Font_Gdiplus_QEAA_PEAUHDC_QEAUHFONT_Z.c  _0Game_AEAA_XZ.c  _0NodeBase_IEAA_XZ.c  _0NodeLabel_IEAA_XZ.cpp  _0ResourceTextureD3D_IEAA_PEBGI_N_Z.cpp  _0SerialXML_QEAA_XZ.cpp  _0TipManager_QEAA_PEBVXmlNode_PEAVNodeBase_N_Z.cpp  _0UIBoardCanvas_QEAA_XZ.cpp  _0UITile_QEAA_AEAUUITileConstructionInfo_HH_Z.c  _1CFont_D3DXCore_QEAA_XZ.cpp  _1CSQMTimeRecorder_QEAA_XZ.c  _1GameStats_QEAA_XZ.cpp  _1NodeBase_MEAA_XZ.cpp  _1NodeButton_MEAA_XZ.c  (+470 more)
